[metadata]
name = aiocoingecko
version = attr: aiocoingecko.__version__
description = Asynchronous Python wrapper for the CoinGecko API
long_description = file: README.md
long_description_content_type = text/markdown
author = regulad
author_email = regulad@outlook.com
url = https://github.com/regulad/aiocoingecko
download_url = https://codeload.github.com/regulad/aiocoingecko/zip/refs/heads/main
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
keywords =
    async
    api

[options]
packages = aiocoingecko
test_suite = tests
install_requires =
    aiohttp
    typing_extensions
